--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
         "url": "git://github.com/localForage/localForage.git"
     },
     "scripts": {
-        "build":"rollup -c rollup.config.js && cp ./localforage.d.ts ./dist"
+        "build": "rollup -c rollup.config.js && cp ./node_modules/localforage-types/index.d.ts ./dist/localforage.d.ts"
     },
     "devDependencies": {
-      "rollup": "^2.52.1",
-      "rollup-plugin-terser": "^7.0.2"
+        "rollup": "^2.52.1",
+        "rollup-plugin-terser": "^7.0.2"
     },
     "module": "./dist/localforage.esm.js",
     "exports": {
-      "types": "./dist/localforage.d.ts",
-      "default": "./dist/localforage.js"
+        "types": "./dist/localforage.d.ts",
+        "default": "./dist/localforage.js"
     },
     "bugs": {
         "url": "http://github.com/localForage/localForage/issues"
     },
     "dependencies": {
-        "lie": "3.1.1"
+        "lie": "3.1.1",
+        "localforage-types": "^1.0.1"
     }
 }
